--- a/src/styles/settings/colors.css
+++ b/src/styles/settings/colors.css
@@ -2,5 +2,7 @@
     --color-alura: #051932;
     --color-pomb-and-power:#7c5e99 ;
     --color-floral-write: #fffcee;
-    --color-fiery-rose:#f25a70
+    --color-fiery-rose:#f25a70;
+    --color-sandstorm: #F5D547;
+
 }
