Create Style of the PlayerScore component

--- a/src/styles/settings/colors.css
+++ b/src/styles/settings/colors.css
@@ -4,5 +4,7 @@
     --color-floral-write: #fffcee;
     --color-fiery-rose:#f25a70;
     --color-sandstorm: #F5D547;
+    --color-old-silver: #828282;
+    --color-mantis: #62C370;
 
 }
