Update error in CSS PlayerScore component style

--- a/src/components/PlayerScore/styles.css
+++ b/src/components/PlayerScore/styles.css
@@ -19,12 +19,10 @@
 .player-score[data-points="1"] > .pointer:first-child {
     background-color: var(--color-mantis);
 }
-.player-score[data-pointer="2"] {
-    flex-direction: row-reverse;
-}
-.player-score[data-points="2"] > .pointer:nth-child(n+2) {
+
+.player-score[data-points="2"] > .pointer:nth-child(-n+2) {
     background-color: var(--color-mantis);
 }
-.player-score[data-points="3"] > .pointer:nth-child(n+1) {
+.player-score[data-points="3"] > .pointer:nth-child(-n+3) {
     background-color: var(--color-mantis);
 }
